light fix on header z-index

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3438,6 +3438,11 @@ a.yabutton-small {
 @media (max-width: 480px)  {
 
 /*-- HEADER --*/
+    
+    #header {
+        position:fixed;
+        z-index:10;
+    }
 
 /*-- CONTAINER --*/
 	.container {
@@ -3707,7 +3712,12 @@ a.yabutton-small {
 }
 /* Landscape phone to portrait tablet */
 @media (min-width: 480px) and (max-width: 767px) {
-
+    /*-- HEADER --*/
+    
+    #header {
+        position:fixed;
+        z-index: 10;
+    }
 /*-- SIGNUP --*/
     .signup-container {
         width:100%;
@@ -3801,13 +3811,14 @@ a.yabutton-small {
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
-<<<<<<< HEAD
+    /*-- HEADER --*/
     
-/*-- SIGNUP --*/
-=======
+    #header {
+        position:fixed;
+        z-index: 10;
+    }
 
     /*-- SIGNUP --*/
->>>>>>> 1784d989b3f4796d9970c9e46577c1e1e3487d9d
     .signup-container {
         width:100%;
         height:100%;
